Spilloppdatering. Henter nå ut tilfeldig lek, og tilfeldig twist ut ifra ifra leken

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SpillActivity"></activity>
+        <activity android:name=".SpillActivity"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
