--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SpillActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".SpillActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".bildeGalleriActivity" />
     </application>
 
 </manifest>
