--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,24 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:configChanges="locale|orientation"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            android:configChanges="locale|orientation"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SpillActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".SpillActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Settings"
+            android:label="@string/nav_instillinger"/>
+
+
     </application>
 
 </manifest>
